--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="data:image/x-icon;base64,..." rel="icon" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/2e6d241559.js" crossorigin="anonymous"></script>
     <script defer src="/static/script.js"></script>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="https://donerkebab63.github.io/static/style.css" />
     <title>Донер Кебаб - доставка горячих блюд на мангале в Тольятти</title>
 </head>
 <body>
