--- a/index.html
+++ b/index.html
@@ -12,6 +12,37 @@
     <script defer src="/static/script.js"></script>
     <link rel="stylesheet" href="https://donerkebab63.github.io/static/style.css" />
     <title>Донер Кебаб - доставка горячих блюд на мангале в Тольятти</title>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Restaurant",
+        "name": "Донер Кебаб",
+        "description": "Шаурмечная в Тольятти с доставкой горячих блюд: шаурма, шашлык, люля-кебаб.",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Ул. Льва Толстого 24Б",
+            "addressLocality": "Тольятти",
+            "addressCountry": "RU"
+        },
+        "telephone": ["+7 (927) 788-98-62", "+7 (927) 788-98-63"],
+        "openingHoursSpecification": [
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Friday", "Saturday"],
+                "opens": "11:00",
+                "closes": "01:00"
+            },
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Sunday"],
+                "opens": "11:00",
+                "closes": "23:00"
+            }
+        ],
+        "servesCuisine": "шаурма, шашлык, люля-кебаб",
+        "url": "https://lesson1by.github.io"
+    }
+</script>
 </head>
 <body>
 <!-- Yandex.Metrika counter -->
